refactor: eliminar interfaces I*Repository redundantes y limpiar archivos innecesarios